# clanbomber_sdl3

./: .gitignore  AUDIO_BALANCING.md  AUDIO_MIGRATION_ANALYSIS.md  CLAUDE.md  CMakeLists.txt  COORDINATE_SYSTEM_REFACTOR_PLAN.md  README.md  TESTING_CHECKLIST.md  TODO_FOR_GEMINI_1M_CONTEXT.md  cbrt_analysis.json  cleanup_plan.json  cleanup_recommendations.py  legacy_analysis.json  legacy_analyzer.py  sugernecias.md  test_results.md  validation_summary.txt
.cache/: analysis-cache.json
docs/: 01_Conceptos_Basicos_Shaders.md  02_Analisis_Problemas_Performance.md  03_Vertex_Shader_Optimizado.md  04_Fragment_Shader_LookupTables.md  05_Compute_Shader_50K_Particulas.md  06_Metricas_Performance_Final.md  ARCHITECTURAL_IMPROVEMENTS.md  AUDIO_BUGS.md  AUDIO_MIGRATION_CODE.md  BUILD.md  GAMECONTEXT_GUIDE.md  GAMECONTEXT_MIGRATION.md  GAMESYSTEMS_GUIDE.md  LifecycleManager_Overview.md  LifecycleManager_Technical.md  MIGRATION_GUIDE.md  MISSING_SOUNDS.md  NEW_TILE_ARCHITECTURE.md  USE_AFTER_FREE_ANALYSIS.md
docs/gfx_corruption_bug/: breakthrough.md  failed_solutions.md  final_diagnosis.md  investigation_timeline.md
docs/lifecycle_manager/: README.md  debugging_guide.md  usage_examples.md
src/: Audio.cpp  Audio.h  AudioMixer.cpp  AudioMixer.h  Bomb.cpp  Bomb.h  Bomber.cpp  Bomber.h  BomberComponents.cpp  BomberComponents.h  BomberCorpse.cpp  BomberCorpse.h  Bomber_legacy.cpp  CMakeCache.txt  CPackConfig.cmake  CPackSourceConfig.cmake  ClanBomber.cpp  ClanBomber.h  Client.h  Controller.cpp  Controller.h  Controller_AI.h  Controller_AI_Modern.cpp  Controller_AI_Modern.h  Controller_AI_Smart.cpp  Controller_AI_Smart.h  Controller_AI_mass.h  Controller_Joystick.cpp  Controller_Joystick.h  Controller_Keyboard.cpp  Controller_Keyboard.h  Controller_RCMouse.h  CoordinateSystem.h  CorpsePart.cpp  CorpsePart.h  ErrorHandling.cpp  ErrorHandling.h  Explosion.cpp  Explosion.h  Extra.cpp  (+76 more)
src/glad-generated/include/glad/: gl.h
src/shaders/: explosion_effects.glsl  optimized_compute.glsl  optimized_fragment.glsl  optimized_fragment_simple copy.glsl  optimized_fragment_simple.glsl  optimized_vertex.glsl  optimized_vertex_simple copy.glsl  optimized_vertex_simple.glsl
tools/: README.md  cbrt.py  cbrt_analysis.json  cbrt_analysis_validation.json  clanbomber_refactor_analyzer_v2.py  smart_pointer_migration.py
tools/cbrt/: __init__.py  cli.py
tools/cbrt/commands/: __init__.py
tools/cbrt/core/: __init__.py  engine.py  models.py
tools/cbrt/dashboard/: app.py  run.py
tools/cbrt/web/static/css/: dashboard.css
tools/cbrt/web/static/js/: dashboard.js
tools/cbrt/web/templates/: dashboard.html
